--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: monash
+Package: MonashEBSTemplates
 Version: 0.1
-Title: Monash Rmarkdown Templates
+Title: Monash EBS Rmarkdown Templates
 Description: This package provides Rmarkdown templates for use at Monash University, Department of Econometrics & Business Statistics.
 Authors@R: person("Rob", "Hyndman", , "Rob.Hyndman@monash.edu", c("aut", "cre"))
 License: GPL-3
